--- a/qnat_elsoas.html
+++ b/qnat_elsoas.html
@@ -95,7 +95,7 @@
                                                                 frameborder="0"
                                                                 aria-label="Drive, قناة السويس مسابقة 2025.mp4"
                                                                 allowfullscreen=""
-                                                                src="https://drive.google.com/file/d/1ozqps-a0K10JjomUyu1_yeFy1WpNDxdc/preview?authuser=0"></iframe>
+                                                                src="https://drive.google.com/file/d/1LmilQlJjzklKy9i_iYOWVXbCKSGOKMc0/preview"></iframe>
                                                             <div class="TPTLxf"></div>
                                                             <div class="JmGwdf SzkQif L6cTce-hJDwNd L6cTce-dQCS7c"
                                                                 role="link" tabindex="0" jsaction="click:QNTBYd"
